# Systeme_embarques

Led/: firstProgram.cxx
Rfid v2/: CMakeLists.txt  Cmake.txt  main.cpp
Rfid v2/lib/rfid/: MFRC522.cpp  MFRC522.h
